--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eo-multitemporal",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^18"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +12,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/earthengine": "^0.1.393",
+    "@turf/turf": "^6.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "maplibre-gl": "^4.1.0",
+    "next": "14.1.3",
+    "node-self": "^1.0.2",
+    "prettier": "^3.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.3",
+    "typescript": "^5"
   }
 }
