--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@google/earthengine": "^0.1.393",
+    "@turf/boolean-intersects": "^6.5.0",
     "@turf/intersect": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "eslint-config-prettier": "^9.1.0",
